[gd_scene load_steps=54 format=2]

[ext_resource path="res://sprites/running/Running2.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://sprites/running/Running1.png" type="Texture" id=3]
[ext_resource path="res://sprites/running/Running4.png" type="Texture" id=4]
[ext_resource path="res://sprites/running/Running5.png" type="Texture" id=5]
[ext_resource path="res://sprites/running/Running6.png" type="Texture" id=6]
[ext_resource path="res://sprites/running/Running3.png" type="Texture" id=7]
[ext_resource path="res://sprites/slide/slide1.png" type="Texture" id=8]
[ext_resource path="res://sprites/slide/slide4.png" type="Texture" id=9]
[ext_resource path="res://sprites/slide/slide5.png" type="Texture" id=10]
[ext_resource path="res://sprites/slide/slide3.png" type="Texture" id=11]
[ext_resource path="res://sprites/slide/slide2.png" type="Texture" id=12]
[ext_resource path="res://sprites/knockout/knockout4.png" type="Texture" id=13]
[ext_resource path="res://sprites/standing/standing.png" type="Texture" id=14]
[ext_resource path="res://sprites/knockout/knockout2.png" type="Texture" id=15]
[ext_resource path="res://sprites/knockout/knockout5.png" type="Texture" id=16]
[ext_resource path="res://sprites/knockout/knockout6.png" type="Texture" id=17]
[ext_resource path="res://sprites/jumping/jump5.png" type="Texture" id=18]
[ext_resource path="res://sprites/jumping/jump1.png" type="Texture" id=19]
[ext_resource path="res://sprites/jumping/jump4-1.png" type="Texture" id=20]
[ext_resource path="res://sprites/jumping/jump4-2.png" type="Texture" id=21]
[ext_resource path="res://sprites/jumping/jump4-3.png" type="Texture" id=22]
[ext_resource path="res://sprites/jumping/jump4-4.png" type="Texture" id=23]
[ext_resource path="res://sprites/jumping/jump2.png" type="Texture" id=24]
[ext_resource path="res://sprites/jumping/jump6.png" type="Texture" id=25]
[ext_resource path="res://sprites/jumping/jump3.png" type="Texture" id=26]
[ext_resource path="res://sprites/dash/dash3.png" type="Texture" id=27]
[ext_resource path="res://soundEffects/runningSound.mp3" type="AudioStream" id=28]
[ext_resource path="res://soundEffects/jumpSound.mp3" type="AudioStream" id=29]
[ext_resource path="res://sprites/knockout/knockout10.png" type="Texture" id=30]
[ext_resource path="res://sprites/knockout/knockout1.png" type="Texture" id=31]
[ext_resource path="res://sprites/knockout/knockout7.png" type="Texture" id=32]
[ext_resource path="res://sprites/knockout/knockout3.png" type="Texture" id=33]
[ext_resource path="res://sprites/knockout/knockout8.png" type="Texture" id=34]
[ext_resource path="res://sprites/knockout/knockout9.png" type="Texture" id=35]
[ext_resource path="res://sprites/standing/turning3.png" type="Texture" id=36]
[ext_resource path="res://sprites/standing/turning4.png" type="Texture" id=37]
[ext_resource path="res://sprites/standing/turning5.png" type="Texture" id=38]
[ext_resource path="res://sprites/standing/turning1.png" type="Texture" id=39]
[ext_resource path="res://sprites/standing/turning2.png" type="Texture" id=40]
[ext_resource path="res://sprites/standing/standing2.png" type="Texture" id=41]
[ext_resource path="res://sprites/standing/standing3.png" type="Texture" id=42]
[ext_resource path="res://sprites/standing/standing4.png" type="Texture" id=43]
[ext_resource path="res://sprites/standing/standing5.png" type="Texture" id=44]
[ext_resource path="res://menus/HUD.tscn" type="PackedScene" id=45]
[ext_resource path="res://soundEffects/wallJumpSound.mp3" type="AudioStream" id=46]
[ext_resource path="res://sprites/dash/dash2.png" type="Texture" id=47]
[ext_resource path="res://sprites/dash/dash1.png" type="Texture" id=48]
[ext_resource path="res://soundEffects/slideSound.mp3" type="AudioStream" id=49]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 12.6474, 52.526 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 48 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 15.7894, 38.9294 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 31 ), ExtResource( 15 ), ExtResource( 33 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 30 ) ],
"loop": false,
"name": "knockout",
"speed": 2.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 25 ), ExtResource( 14 ) ],
"loop": false,
"name": "Jump(end)",
"speed": 4.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "Sliding",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 24 ), ExtResource( 26 ) ],
"loop": false,
"name": "Jump(start)",
"speed": 4.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 43 ), ExtResource( 42 ), ExtResource( 41 ), ExtResource( 14 ), ExtResource( 41 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 43 ), ExtResource( 42 ), ExtResource( 41 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 37 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 38 ), ExtResource( 37 ), ExtResource( 36 ), ExtResource( 40 ), ExtResource( 39 ) ],
"loop": true,
"name": "Standing",
"speed": 1.25
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Running",
"speed": 5.0
}, {
"frames": [ ExtResource( 48 ), ExtResource( 47 ), ExtResource( 27 ) ],
"loop": true,
"name": "Dash",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
script = ExtResource( 2 )

[node name="DashHB" type="CollisionShape2D" parent="."]
position = Vector2( 9, 9 )
rotation = 2.0944
shape = SubResource( 7 )
disabled = true

[node name="StandingHB" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="SlidingHB" type="CollisionShape2D" parent="."]
position = Vector2( 0, 36 )
rotation = 1.5708
scale = Vector2( 0.76, 0.822 )
shape = SubResource( 6 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 2 )
animation = "Standing"
frame = 15
speed_scale = 4.0
playing = true
offset = Vector2( 0, -64 )
__meta__ = {
"_edit_lock_": true
}

[node name="dash_timers" type="Node" parent="."]

[node name="dash_dur_timer" type="Timer" parent="dash_timers"]
one_shot = true

[node name="dash_cd_timer" type="Timer" parent="dash_timers"]
one_shot = true

[node name="collision_detection" type="Position2D" parent="."]
position = Vector2( 0, 48 )

[node name="ground" type="RayCast2D" parent="collision_detection"]
position = Vector2( -16, 1 )
enabled = true
cast_to = Vector2( 32, 0 )

[node name="left" type="RayCast2D" parent="collision_detection"]
position = Vector2( -32, -96 )
enabled = true
cast_to = Vector2( 0, 96 )

[node name="right" type="RayCast2D" parent="collision_detection"]
position = Vector2( 32, -96 )
enabled = true
cast_to = Vector2( 0, 96 )

[node name="head" type="RayCast2D" parent="collision_detection"]
position = Vector2( 0, -96 )
enabled = true
cast_to = Vector2( 0, 70 )

[node name="wallJumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 46 )
volume_db = 5.0

[node name="runningSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 28 )
autoplay = true

[node name="slideSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 49 )
volume_db = 5.0

[node name="jumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 29 )
volume_db = 10.0

[node name="CanvasLayer" parent="." instance=ExtResource( 45 )]

[connection signal="timeout" from="dash_timers/dash_dur_timer" to="." method="_on_dash_dur_timer_timeout"]
[connection signal="timeout" from="dash_timers/dash_cd_timer" to="." method="_on_dash_cd_timer_timeout"]
